force-app/main/default/objects/MDU_Building__c/MDU_Building__c.object-meta.xml
<CustomObject>
    <description>Represents a physical building under a project. (PVFSL-891)</description>
    <label>MDU Building</label>
    <nameField>
        <label>MDU Building Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDU Buildings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>