force-app/main/default/objects/MDU_Building__c/fields/MDU_Project__c.field-meta.xml
<CustomField>
    <fullName>MDU_Project__c</fullName>
    <description>MDU Project associated to this building. (PVFSL-891)</description>
    <label>MDU Project</label>
    <referenceTo>MDU_Project__c</referenceTo>
    <relationshipLabel>MDU Buildings</relationshipLabel>
    <relationshipName>MDU_Buildings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>