force-app/main/default/objects/MDU_Building__c/fields/Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>Unit_Count__c</fullName>
    <description>Total number of units in the building. (PVFSL-891)</description>
    <label>Unit Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>